# rust-playground

./: .gitignore
async-primer/: Cargo.toml
async-primer/src/: main.rs
box-play/: Cargo.toml
box-play/src/: main.rs
collection-type/: Cargo.toml
collections/: Cargo.toml
collections/src/: main.rs
compose/: Cargo.toml
compose/src/: fp.rs
concise_control_flow/: Cargo.toml
concise_control_flow/src/: main.rs
const_static/: Cargo.toml
const_static/src/: main.rs
control_flows/: Cargo.toml
control_flows/src/: main.rs
demo/: .sqlxrc.sample.json  Cargo.toml  package-lock.json  package.json  sqlx-ts.json
demo/src/: info.rs  lazy.rs  main-arc.rs  main-async-pool.rs  main-async.rs  main-conn.rs  main-future-manual.rs  main-future.rs  main-hmm.rs  main-lazy-static.rs  main-map.rs  main-mutex.rs  main-tmp.rs  main.rs  other.rs
derek/: Cargo.toml
derek/src/: main.rs
enumTest/: Cargo.toml
enumTest/src/: main.rs
exceptions/: Cargo.toml  hello.txt
exceptions/src/: main.rs
function-pointer/: Cargo.toml
functional/: Cargo.toml
functional/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
guessing_game/: Cargo.toml
hashmap/: Cargo.toml
hashmap/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main  main.rs
lol/: Cargo.toml
module_test/: Cargo.toml
mutability/: Cargo.toml
patternMatching/: Cargo.toml
pattern_matching/: Cargo.toml
references_fun/: Cargo.toml
references_mutable/: Cargo.toml
strings/: Cargo.toml
strings2/: Cargo.toml
struct2/: Cargo.toml
structPly/: Cargo.toml
variables/: Cargo.toml
(+15 files in other folders)
